<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_bottom"
        android:icon="@drawable/home_icon"
        android:enabled="true"
        android:title="@string/home_bottom" />
    <item
        android:id="@+id/home_search"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="@string/home_search" />

<!--   <item
        android:id="@+id/home_chat"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/discountprice"
        android:title="Offers" />-->

    <item
        android:id="@+id/home_chat"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/question"
        android:title="@string/home_help" />

    <item
        android:id="@+id/home_card"
        android:enabled="true"
        android:icon="@drawable/add_to_cart_icon"
        android:title="@string/home_card" />
    <item
        android:id="@+id/home_account"
        android:enabled="true"
        android:icon="@drawable/account_icon"
        android:title="@string/home_account" />

</menu>