<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logincontentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:background="@android:color/transparent"
    android:elevation="10dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ly_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/login_img" />

            <LinearLayout
                android:id="@+id/login_laoput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="start"
                    android:text="@string/sigin"
                    android:textAllCaps="false"
                    android:textColor="#1DC070"
                    android:textSize="27dp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/edittext_background"
                    android:minHeight="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        android:src="@drawable/img_email" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="Email ID"
                        android:inputType="textNoSuggestions|textEmailAddress"
                        android:maxLines="1"
                        android:minHeight="40dp"
                        android:paddingLeft="4dp"
                        android:paddingTop="8dp"
                        android:textColor="#17284D"
                        android:textColorHint="#808695"
                        android:textSize="18dp"
                        android:textStyle="normal"
                        android:typeface="normal" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/edittext_background"
                    android:minHeight="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/lock"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/img_lock" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/forgot_password"
                        android:layout_toRightOf="@+id/lock"
                        android:background="@null"
                        android:ellipsize="start"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:minHeight="40dp"
                        android:paddingLeft="2dp"
                        android:paddingTop="5dp"
                        android:textColor="#17284D"
                        android:textColorHint="#808695"
                        android:textSize="18dp"
                        android:textStyle="normal"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="Forgot? "
                        android:textColor="#D92662"
                        android:textSize="15dp"
                        android:typeface="serif" />
                </RelativeLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sigin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#276CF6"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20"
                    android:textStyle="normal"
                    android:typeface="sans" />


                <TextView
                    android:id="@+id/tvloginwith"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/loginwith"
                    android:textColor="#7E858B"
                    android:textColorHint="#7E858B"
                    android:textSize="@dimen/text_14"
                    android:typeface="normal" />


                <TableLayout
                    android:id="@+id/sso_login"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="visible"
                    android:layout_marginTop="20dp">

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/gmail_login_layout"
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:background="@drawable/login_ssobg"
                            android:gravity="center"
                            android:padding="8dp"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:src="@drawable/signin_gp_item" />

                        <ImageButton
                            android:id="@+id/facebook_login_layout"
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:background="@drawable/login_ssobg"
                            android:gravity="center"
                            android:padding="8dp"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:src="@drawable/fbnew" />
                    </TableRow>
                </TableLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signup_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="100dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:inputType="text"
                    android:text="@string/signup"
                    android:textColor="#17284D"
                    android:textColorLink="#276CF6"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:typeface="sans" />


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
